# fraud_by_creditcard

./: .gitignore  pyproject.toml
fraud_creditcard_ml/: helpers.py  main.py
notebook/: CreditCard.ipynb  feature_eng_mine.ipynb  feature_engineering.ipynb  pipeline_fraud.ipynb
tests/: test_fraud_creditcard_ml.py
