[tool.poetry]
name = "fraud-creditcard_ml"
version = "0.1.0"
description = ""
authors = ["Muhammadan <danelegrand@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
jupyter = "^1.0.0"
ipykernel = "^5.4.2"
matplotlib = "^3.3.3"
pandas_profiling = "^2.9.0"
seaborn = "^0.11.1"
sklearn = "^0.0"
xgboost = "^1.3.3"
streamlit = "^0.79.0"
dython = "^0.6.4"
yellowbrick = "^1.3.post1"
shap = "^0.39.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
